Change project name.

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "stream-sync",
+  "name": "Compton Gamma Ray Observatory",
   "version": "0.0.1",
   "description": "",
   "main": "server/index.js",
